--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 	
 </head>
 <body>
-	
 	<div data-article="about" class="bubble" aria-label="sobre"><i class="fa fa-info" aria-hidden="true"></i></div>
 	<div data-article="projects" class="bubble red" aria-label="projetos"><i class="fa fa-file-code-o" aria-hidden="true"></i></div>
-	<div data-article="resumé" class="bubble green" aria-label="currículo"><a target="_blank" href="files/resume.pdf"><i class="fa fa-briefcase" aria-hidden="true"></i></a></div>
+	<div class="bubble green" aria-label="currículo"><a target="_blank" href="files/resume.pdf"><i class="fa fa-briefcase" aria-hidden="true"></i></a></div>
 	<div class="title"><div class="animated-border"></div><h1>lbam</h1><h5>Lucas Barros</h5></div>	
-
 	
 	<article id="about">
 		<i style="position: absolute; right: 0;" class="fa fa-times close" aria-hidden="true"></i>
