Project imgs / smaller resume

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			<h3 class="sectionTitle">Projetos</h3>
 			<hr>
 			<section id="project-cells">
-				<div class="project"><p>fsmengenharia</p><a target="_blank" href="http://fsmengenharia.gear.host/"><i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
-				<div class="project"><p>WIC?</p><div style="display: flex; justify-content: flex-end;"> <a target="_blank" href="http://github.com/lucasbarross/dcbot"><i class="fa fa-github" aria-hidden="true"></i></a><a target="_blank" href="http://wicbot.tk"><i class="fa fa-arrow-right" aria-hidden="true"></i></a></div></div>
+				<div class="project"><img class="round" src="img/fsmengenharia.png"><p>fsmengenharia.com.br</p><a target="_blank" href="http://fsmengenharia.com.br"><i style="line-height: 50px"; class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
+				<div class="project"><img style="width: 50px;"class="round" src="http://wicbot.tk/img/logo.png"><p>WIC?</p><div style="display: flex; justify-content: flex-end;"> <a target="_blank" href="http://github.com/lucasbarross/dcbot"><i style="line-height: 50px"; class="fa fa-github" aria-hidden="true"></i></a><a target="_blank" href="http://wicbot.tk"><i style="line-height: 50px"; class="fa fa-arrow-right" aria-hidden="true"></i></a></div></div>
 			</section>
 		</div>
 	</article>
